
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-oct-30 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
++All
    Use double instead float when possible, ande code cleaning.


2008-Oct-19 UPDATE Dick Hollenbeck <dick@softplc.com>
================================================================================
+eeschema
    Fixed SCH_COMPONENT() copy constructor with Jean-Pierre's bug catch.
    Developed a non-functional fbp file using wxFormBuilder for the new
    dialog_edit_component_in_schematic dialog which I plan on coding in the
    next couple of weeks as time permits.

2008-oct-17 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    Solved a bug when creating a new zone outline that could crash pcbnew
    More about copper zones filled without grid (by polygons)
    Currently for tests only (work in progress).
    now working: Thermal reliefs parameters can be set.

2008-oct-11 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    More about copper zones filled without grid (by polygons)
    Currently for tests only (work in progress).
    now working
        thermal reliefs.
        texts on copper zones.
        Removing insulated copper islands.
    currently : not implemented:
        trapezoidal pads

2008-oct-07 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew:
    More about copper zones filled without grid (by polygons)
    Currently for eyes and tests only (work in progress).
    now working
        thermal reliefs.
        texts on copper zones.