@@ -1,3 +1,6 @@
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
+                    ${Boost_INCLUDE_DIR}
+                   )
 set(COMMON_SRCS
     about_kicad.cpp
     base_screen.cpp
