@@ -15,46 +15,71 @@
 
 
 #ifndef MIN
-#define MIN( x, y )       ( (x) > (y) ? (y) : (x) )
+#define MIN( x, y ) ( (x) > (y) ? (y) : (x) )
 #endif
 #ifndef MAX
-#define MAX( x, y )       ( (x) > (y) ? (x) : (y) )
+#define MAX( x, y ) ( (x) > (y) ? (x) : (y) )
 #endif
 
 #ifndef ABS
-#define ABS( y )          ( (y) >= 0 ? (y) : ( -(y) ) )
+#define ABS( y ) ( (y) >= 0 ? (y) : ( -(y) ) )
 #endif
 
-#define DEG2RAD( Deg )    ( (Deg) * M_PI / 180.0 )
-#define RAD2DEG( Rad )    ( (Rad) * 180.0 / M_PI )
+#define DEG2RAD( Deg ) ( (Deg) * M_PI / 180.0 )
+#define RAD2DEG( Rad ) ( (Rad) * 180.0 / M_PI )
 
 /* Normalize angle to be in the -360.0 .. 360.0 range or 0 .. 360.0: */
-#define NORMALIZE_ANGLE( Angle )  { while( Angle < 0 ) \
-                                        Angle += 3600;\
-                                    while( Angle > 3600 ) \
-                                        Angle -= 3600; }
+#define NORMALIZE_ANGLE( Angle ) { while( Angle < 0 ) \
+                                       Angle += 3600;\
+                                   while( Angle > 3600 ) \
+                                       Angle -= 3600; }
 
 /* Normalize angle to be in the 0.0 .. 360.0 range: */
-#define NORMALIZE_ANGLE_POS( Angle )  { while( Angle < 0 ) \
-                                            Angle += 3600;while( Angle >= 3600 ) \
-                                            Angle -= 3600; }
+#define NORMALIZE_ANGLE_POS( Angle ) { while( Angle < 0 ) \
+                                           Angle += 3600;while( Angle >= 3600 ) \
+                                           Angle -= 3600; }
 #define NEGATE_AND_NORMALIZE_ANGLE_POS( Angle ) \
     { Angle = -Angle; while( Angle < 0 ) \
           Angle += 3600;while( Angle >= 3600 ) \
           Angle -= 3600; }
 
 /* Normalize angle to be in the -90.0 .. 90.0 range */
-#define NORMALIZE_ANGLE_90( Angle )   { while( Angle < -900 ) \
-                                            Angle += 1800;\
-                                        while( Angle > 900 ) \
-                                            Angle -= 1800; }
+#define NORMALIZE_ANGLE_90( Angle ) { while( Angle < -900 ) \
+                                          Angle += 1800;\
+                                      while( Angle > 900 ) \
+                                          Angle -= 1800; }
 
 
-/****************************************/
-/* inline functions to exchange 2 items */
-/****************************************/
+/*****************************/
+/* macro to exchange 2 items */
+/*****************************/
 
-#define EXCHG( a, b ) { typeof(a) __temp__ = (a); (a) = (b); (b) = __temp__; }
+/* this macro uses the typeof keyword
+ * for compilers that do not know typeof (MSVC )
+ * the boost libs have a workaround for the typeof problem
+ */
+#ifdef __MSVC__     // MSCV does not know typeof. Others def can be added here
+#include "boost/typeof/typeof.hpp"
+
+// we have to register the types used with the typeof keyword with boost
+BOOST_TYPEOF_REGISTER_TYPE( wxPoint );
+BOOST_TYPEOF_REGISTER_TYPE( wxSize );
+BOOST_TYPEOF_REGISTER_TYPE( wxString );
+class DrawSheetLabelStruct;
+BOOST_TYPEOF_REGISTER_TYPE( DrawSheetLabelStruct* );
+class EDA_BaseStruct;
+BOOST_TYPEOF_REGISTER_TYPE( EDA_BaseStruct* );
+class D_PAD;
+BOOST_TYPEOF_REGISTER_TYPE( D_PAD* );
+BOOST_TYPEOF_REGISTER_TYPE( const D_PAD* );
+class BOARD_ITEM;
+BOOST_TYPEOF_REGISTER_TYPE( BOARD_ ITEM* );
+
+#define typeof (expr)BOOST_TYPEOF( expr )
+#endif  // #ifdef __MSVC__
+
+// here is the macro:
+#define EXCHG( a, b ) { typeof(a)__temp__ = (a); (a) = (b); (b) = __temp__; }
 
 
 /*****************************************************/
@@ -62,7 +87,7 @@
 /*****************************************************/
 static inline void ADD_MENUITEM( wxMenu* menu, int id,
                                  const wxString& text,
-								 const wxBitmap& icon )
+                                 const wxBitmap& icon )
 {
     wxMenuItem* l_item;
 
@@ -88,8 +113,8 @@ static inline void ADD_MENUITEM_WITH_SUBMENU( wxMenu* menu, wxMenu* submenu,
                                               int id, const wxString& text,
                                               const wxBitmap& icon )
 {
-	extern wxFont * g_ItalicFont;
-    wxMenuItem* l_item;
+    extern wxFont* g_ItalicFont;
+    wxMenuItem*    l_item;
 
     l_item = new wxMenuItem( menu, id, text );
     l_item->SetSubMenu( submenu );
@@ -98,15 +123,15 @@ static inline void ADD_MENUITEM_WITH_SUBMENU( wxMenu* menu, wxMenu* submenu,
     menu->Append( l_item );
 };
 
-static inline void ADD_MENUITEM_WITH_HELP_AND_SUBMENU( wxMenu* menu,
-                                                       wxMenu* submenu,
+static inline void ADD_MENUITEM_WITH_HELP_AND_SUBMENU( wxMenu*         menu,
+                                                       wxMenu*         submenu,
                                                        int             id,
                                                        const wxString& text,
                                                        const wxString& help,
-                                                       const wxBitmap&       icon )
+                                                       const wxBitmap& icon )
 {
-	extern wxFont * g_ItalicFont;
-    wxMenuItem* l_item;
+    extern wxFont* g_ItalicFont;
+    wxMenuItem*    l_item;
 
     l_item = new wxMenuItem( menu, id, text, help );
     l_item->SetSubMenu( submenu );
@@ -134,7 +159,7 @@ static inline void ADD_MENUITEM_WITH_HELP_AND_SUBMENU( wxMenu*         menu,
                                                        int             id,
                                                        const wxString& text,
                                                        const wxString& help,
-                                                       const wxBitmap&       icon )
+                                                       const wxBitmap& icon )
 {
     wxMenuItem* l_item;
 
